[package]
name = "aoc-2022"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
num = "0.4.0"
itertools = { version = "0.10.5" }
inventory = "0.3.2"
pom = "3.2.0"
strum = "0.24.1"
strum_macros = "0.24.3"
regex = "1.7.0"
anyhow = "1.0.66"
fast_paths = "0.2.0"
either = "1.8.0"
